--- a/components.json
+++ b/components.json
@@ -5,7 +5,7 @@
   "tsx": true,
   "tailwind": {
     "config": "tailwind.config.js",
-    "css": "styles/index.css",
+    "css": "@/styles/globals.css",
     "baseColor": "neutral",
     "cssVariables": false
   },
