--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toggle": "^1.0.3",
+    "@radix-ui/react-tooltip": "^1.0.6",
     "clsx": "^2.0.0",
     "dayjs": "^1.11.9",
     "lucide-react": "^0.263.0",
