--- a/package.json
+++ b/package.json
@@ -27,35 +27,36 @@
     "@radix-ui/react-tooltip": "^1.0.6",
     "clsx": "^2.0.0",
     "dayjs": "^1.11.9",
-    "lucide-react": "^0.263.0",
+    "lucide-react": "^0.263.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.14.2",
     "react-router-dom": "^6.14.2",
-    "zustand": "^4.3.9"
+    "zustand": "^4.4.0"
   },
   "devDependencies": {
-    "@supabase/supabase-js": "^2.26.0",
-    "@types/node": "^20.4.4",
-    "@types/react": "^18.2.15",
+    "@supabase/supabase-js": "^2.31.0",
+    "@types/node": "^20.4.7",
+    "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "@vitejs/plugin-react": "^4.0.3",
+    "@typescript-eslint/eslint-plugin": "^6.2.1",
+    "@typescript-eslint/parser": "^6.2.1",
+    "@vitejs/plugin-react": "^4.0.4",
     "autoprefixer": "^10.4.14",
     "class-variance-authority": "^0.7.0",
-    "eslint": "^8.45.0",
+    "eslint": "^8.46.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.27",
-    "prettier": "^3.0.0",
+    "prettier": "^3.0.1",
     "prettier-plugin-tailwindcss": "^0.4.1",
+    "react-error-boundary": "^4.0.10",
     "react-hook-form": "^7.45.2",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.3.3",
     "tailwindcss-animate": "^1.0.6",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5",
+    "typescript": "^5.1.6",
+    "vite": "^4.4.8",
     "zod": "^3.21.4"
   }
 }
