feat: added animations

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-tooltip": "^1.0.6",
     "clsx": "^2.0.0",
     "dayjs": "^1.11.9",
+    "framer-motion": "^10.15.1",
     "lucide-react": "^0.263.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
