--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.6",
+    "clsx": "^2.0.0",
     "dayjs": "^1.11.9",
     "framer-motion": "^10.15.1",
     "lucide-react": "^0.263.1",
