config(eslint): import resolver, sort, unused

--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
     "@radix-ui/react-tooltip": "^1.0.6",
     "clsx": "^2.0.0",
     "dayjs": "^1.11.9",
+    "eslint-import-resolver-typescript": "^3.6.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-unused-imports": "^3.0.0",
     "framer-motion": "^10.16.4",
     "lint-staged": "^14.0.1",
     "lucide-react": "^0.263.1",
