--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "lucide-react": "^0.263.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lazy-load": "^4.0.1",
     "react-router": "^6.15.0",
     "react-router-dom": "^6.15.0",
     "zustand": "^4.4.1"
