--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.6",
+    "blurhash": "^2.0.5",
     "clsx": "^2.0.0",
     "dayjs": "^1.11.9",
     "eslint-import-resolver-typescript": "^3.6.0",
@@ -50,8 +51,8 @@
     "lint-staged": "^14.0.1",
     "lucide-react": "^0.263.1",
     "react": "^18.2.0",
+    "react-blurhash": "^0.3.0",
     "react-dom": "^18.2.0",
-    "react-lazy-load": "^4.0.1",
     "react-router": "^6.15.0",
     "react-router-dom": "^6.15.0",
     "zustand": "^4.4.1"
