feat: added review button

--- a/setup/example.env
+++ b/setup/example.env
@@ -6,3 +6,6 @@ VITE_SUPABASE_ANON_KEY=""
 
 # SUPABASE GAMES TABLE NAME
 VITE_SUPABASE_GAMES_TABLE=""
+
+# AUTH REDIRECT PROD SITE URL
+VITE_SITE_URL=""
