--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nivo/core": "^0.83.0",
     "@nivo/line": "^0.83.0",
     "@nivo/pie": "^0.83.0",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-hover-card": "^1.0.6",
@@ -46,6 +47,7 @@
     "blurhash": "^2.0.5",
     "clsx": "^2.0.0",
     "cmdk": "^1.0.0",
+    "date-fns": "^3.6.0",
     "dayjs": "^1.11.9",
     "eslint-import-resolver-typescript": "^3.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
@@ -56,6 +58,7 @@
     "lucide-react": "^0.303.0",
     "react": "^18.2.0",
     "react-blurhash": "^0.3.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-router": "^6.15.0",
     "react-router-dom": "^6.15.0",
