--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "html2canvas-pro": "^1.4.3",
     "lint-staged": "^14.0.1",
     "lucide-react": "^0.303.0",
+    "posthog-js": "^1.139.1",
     "react": "^18.2.0",
     "react-blurhash": "^0.3.0",
     "react-day-picker": "^8.10.1",
